--- a/3. percentile and IQR.ipynb
+++ b/3. percentile and IQR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e95a9317",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4c76afb2",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "58e4241d",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "38a8b1c7",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "e985f109",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "709cb5ce",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
        " 'status']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "40967850",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
        "['sl_no', 'ssc_p', 'hsc_p', 'degree_p', 'etest_p', 'mba_p', 'salary']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "7182c044",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
        "max    940000.000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "89c419d8",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
        "60.599999999999994"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "54b372d0",
    "metadata": {},
    "outputs": [],
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "ae3249e7",
    "metadata": {},
    "outputs": [
@@ -450,7 +450,7 @@
        "upper whister   322.0  98.35  91.15     88.5  118.75    78.72  390000.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,13 +461,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "id": "a83e261d",
    "metadata": {},
    "outputs": [],
    "source": [
     "def Univariate(dataset,quan):\n",
-    "    descriptive=pd.DataFrame(index=[\"mean\",\"median\",\"mode\",\"Q1:25th\",\"Q2:50th\",\"Q3:75th\",\"99th\",\"Q4:100th\",\"IQR\",\"min\",\"max\",\"lower whister\",\"upper whister\"],columns=quan)\n",
+    "    descriptive=pd.DataFrame(index=[\"mean\",\"median\",\"mode\",\"Q1:25th\",\"Q2:50th\",\n",
+    "                                    \"Q3:75th\",\"99th\",\"Q4:100th\",\"IQR\",\"min\",\"max\",\n",
+    "                                    \"lower whister\",\"upper whister\",\"skewness\",\"kurtosis\"],columns=quan)\n",
     "    for columnName in quan:\n",
     "        descriptive[columnName][\"mean\"]=dataset[columnName].mean()\n",
     "        descriptive[columnName][\"median\"]=dataset[columnName].median()\n",
@@ -482,12 +484,14 @@
     "        descriptive[columnName][\"max\"]=dataset.describe()[columnName][\"max\"]\n",
     "        descriptive[columnName][\"lower whister\"]=descriptive[columnName][\"Q1:25th\"]-(1.5*descriptive[columnName][\"IQR\"])\n",
     "        descriptive[columnName][\"upper whister\"]=descriptive[columnName][\"Q3:75th\"]+(1.5*descriptive[columnName][\"IQR\"])\n",
+    "        descriptive[columnName][\"skewness\"]=dataset[columnName].skew()\n",
+    "        descriptive[columnName][\"kurtosis\"]=dataset[columnName].kurtosis()\n",
     "    return descriptive"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "id": "a7bf6ac1",
    "metadata": {},
    "outputs": [
@@ -526,11 +530,11 @@
        "      <th>mean</th>\n",
        "      <td>108.0</td>\n",
        "      <td>67.303395</td>\n",
-       "      <td>66.334744</td>\n",
-       "      <td>66.358558</td>\n",
+       "      <td>66.333163</td>\n",
+       "      <td>66.370186</td>\n",
        "      <td>72.100558</td>\n",
        "      <td>62.278186</td>\n",
-       "      <td>277648.648649</td>\n",
+       "      <td>288655.405405</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>median</th>\n",
@@ -586,7 +590,7 @@
        "      <th>99th</th>\n",
        "      <td>212.86</td>\n",
        "      <td>87.0</td>\n",
-       "      <td>91.129</td>\n",
+       "      <td>91.86</td>\n",
        "      <td>83.86</td>\n",
        "      <td>97.0</td>\n",
        "      <td>76.1142</td>\n",
@@ -596,11 +600,11 @@
        "      <th>Q4:100th</th>\n",
        "      <td>215.0</td>\n",
        "      <td>89.4</td>\n",
-       "      <td>91.15</td>\n",
-       "      <td>88.5</td>\n",
+       "      <td>97.7</td>\n",
+       "      <td>91.0</td>\n",
        "      <td>98.0</td>\n",
        "      <td>77.89</td>\n",
-       "      <td>390000.0</td>\n",
+       "      <td>940000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>IQR</th>\n",
@@ -616,7 +620,7 @@
        "      <th>min</th>\n",
        "      <td>1.0</td>\n",
        "      <td>40.89</td>\n",
-       "      <td>42.75</td>\n",
+       "      <td>37.0</td>\n",
        "      <td>50.0</td>\n",
        "      <td>50.0</td>\n",
        "      <td>51.21</td>\n",
@@ -626,11 +630,11 @@
        "      <th>max</th>\n",
        "      <td>215.0</td>\n",
        "      <td>89.4</td>\n",
-       "      <td>91.15</td>\n",
-       "      <td>88.5</td>\n",
+       "      <td>97.7</td>\n",
+       "      <td>91.0</td>\n",
        "      <td>98.0</td>\n",
        "      <td>77.89</td>\n",
-       "      <td>390000.0</td>\n",
+       "      <td>940000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>lower whister</th>\n",
@@ -652,43 +656,67 @@
        "      <td>78.72</td>\n",
        "      <td>390000.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>skewness</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.132649</td>\n",
+       "      <td>0.163639</td>\n",
+       "      <td>0.244917</td>\n",
+       "      <td>0.282308</td>\n",
+       "      <td>0.313576</td>\n",
+       "      <td>3.569747</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>kurtosis</th>\n",
+       "      <td>-1.2</td>\n",
+       "      <td>-0.60751</td>\n",
+       "      <td>0.450765</td>\n",
+       "      <td>0.052143</td>\n",
+       "      <td>-1.08858</td>\n",
+       "      <td>-0.470723</td>\n",
+       "      <td>18.544273</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "                sl_no      ssc_p      hsc_p   degree_p    etest_p      mba_p  \\\n",
-       "mean            108.0  67.303395  66.334744  66.358558  72.100558  62.278186   \n",
+       "mean            108.0  67.303395  66.333163  66.370186  72.100558  62.278186   \n",
        "median          108.0       67.0       65.0       66.0       71.0       62.0   \n",
        "mode                1       62.0       63.0       65.0       60.0       56.7   \n",
        "Q1:25th          54.5       60.6       60.9       61.0       60.0     57.945   \n",
        "Q2:50th         108.0       67.0       65.0       66.0       71.0       62.0   \n",
        "Q3:75th         161.5       75.7       73.0       72.0       83.5     66.255   \n",
-       "99th           212.86       87.0     91.129      83.86       97.0    76.1142   \n",
-       "Q4:100th        215.0       89.4      91.15       88.5       98.0      77.89   \n",
+       "99th           212.86       87.0      91.86      83.86       97.0    76.1142   \n",
+       "Q4:100th        215.0       89.4       97.7       91.0       98.0      77.89   \n",
        "IQR             107.0       15.1       12.1       11.0       23.5       8.31   \n",
-       "min               1.0      40.89      42.75       50.0       50.0      51.21   \n",
-       "max             215.0       89.4      91.15       88.5       98.0      77.89   \n",
+       "min               1.0      40.89       37.0       50.0       50.0      51.21   \n",
+       "max             215.0       89.4       97.7       91.0       98.0      77.89   \n",
        "lower whister  -106.0      37.95      42.75       44.5      24.75      45.48   \n",
        "upper whister   322.0      98.35      91.15       88.5     118.75      78.72   \n",
+       "skewness          0.0  -0.132649   0.163639   0.244917   0.282308   0.313576   \n",
+       "kurtosis         -1.2   -0.60751   0.450765   0.052143   -1.08858  -0.470723   \n",
        "\n",
        "                      salary  \n",
-       "mean           277648.648649  \n",
+       "mean           288655.405405  \n",
        "median              265000.0  \n",
        "mode                300000.0  \n",
        "Q1:25th             240000.0  \n",
        "Q2:50th             265000.0  \n",
        "Q3:75th             300000.0  \n",
        "99th                     NaN  \n",
-       "Q4:100th            390000.0  \n",
+       "Q4:100th            940000.0  \n",
        "IQR                  60000.0  \n",
        "min                 200000.0  \n",
-       "max                 390000.0  \n",
+       "max                 940000.0  \n",
        "lower whister       150000.0  \n",
-       "upper whister       390000.0  "
+       "upper whister       390000.0  \n",
+       "skewness            3.569747  \n",
+       "kurtosis           18.544273  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
