--- a/Faircopy.ipynb
+++ b/Faircopy.ipynb
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "a16321f3",
    "metadata": {},
    "outputs": [],
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "cfd2de0f",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
        " 'status']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "69016e7a",
    "metadata": {},
    "outputs": [
@@ -367,7 +367,7 @@
        "['sl_no', 'ssc_p', 'hsc_p', 'degree_p', 'etest_p', 'mba_p', 'salary']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,8 +378,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "21aa831f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_8656\\324521342.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdescriptive\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mUnivariate\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mUnivariate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mquan\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mD:\\AI course\\data science\\Univariate.py\u001b[0m in \u001b[0;36mUnivariate\u001b[1;34m(dataset, quan)\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mUnivariate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mquan\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m         descriptive=pd.DataFrame(index=[\"mean\",\"median\",\"mode\",\"Q1:25th\",\"Q2:50th\",\n\u001b[0m\u001b[0;32m     17\u001b[0m                                     \u001b[1;34m\"Q3:75th\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"99th\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"Q4:100th\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"IQR\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"min\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"max\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m                                     \"lower whister\",\"upper whister\",\"skewness\",\"kurtosis\"],columns=quan)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "descriptive=Univariate.Univariate(dataset,quan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b91f49b9",
    "metadata": {},
    "outputs": [],
    "source": []
