--- a/3. percentile and IQR.ipynb
+++ b/3. percentile and IQR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e95a9317",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4c76afb2",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "58e4241d",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "38a8b1c7",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "e985f109",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "709cb5ce",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
        " 'status']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "40967850",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
        "['sl_no', 'ssc_p', 'hsc_p', 'degree_p', 'etest_p', 'mba_p', 'salary']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "a83e261d",
    "metadata": {},
    "outputs": [],
@@ -469,7 +469,7 @@
     "def Univariate(dataset,quan):\n",
     "    descriptive=pd.DataFrame(index=[\"mean\",\"median\",\"mode\",\"Q1:25th\",\"Q2:50th\",\n",
     "                                    \"Q3:75th\",\"99th\",\"Q4:100th\",\"IQR\",\"min\",\"max\",\n",
-    "                                    \"lower whister\",\"upper whister\",\"skewness\",\"kurtosis\"],columns=quan)\n",
+    "                                    \"lower whister\",\"upper whister\",\"skewness\",\"kurtosis\",\"var\",\"std\"],columns=quan)\n",
     "    for columnName in quan:\n",
     "        descriptive[columnName][\"mean\"]=dataset[columnName].mean()\n",
     "        descriptive[columnName][\"median\"]=dataset[columnName].median()\n",
@@ -486,12 +486,14 @@
     "        descriptive[columnName][\"upper whister\"]=descriptive[columnName][\"Q3:75th\"]+(1.5*descriptive[columnName][\"IQR\"])\n",
     "        descriptive[columnName][\"skewness\"]=dataset[columnName].skew()\n",
     "        descriptive[columnName][\"kurtosis\"]=dataset[columnName].kurtosis()\n",
+    "        descriptive[columnName][\"var\"]=dataset[columnName].var()\n",
+    "        descriptive[columnName][\"std\"]=dataset[columnName].std()\n",
     "    return descriptive"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "a7bf6ac1",
    "metadata": {},
    "outputs": [
@@ -676,47 +678,71 @@
        "      <td>-0.470723</td>\n",
        "      <td>18.544273</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>var</th>\n",
+       "      <td>3870.0</td>\n",
+       "      <td>117.228377</td>\n",
+       "      <td>118.755706</td>\n",
+       "      <td>54.151103</td>\n",
+       "      <td>176.251018</td>\n",
+       "      <td>34.028376</td>\n",
+       "      <td>8734295412.759695</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>62.209324</td>\n",
+       "      <td>10.827205</td>\n",
+       "      <td>10.897509</td>\n",
+       "      <td>7.358743</td>\n",
+       "      <td>13.275956</td>\n",
+       "      <td>5.833385</td>\n",
+       "      <td>93457.45242</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                sl_no      ssc_p      hsc_p   degree_p    etest_p      mba_p  \\\n",
-       "mean            108.0  67.303395  66.333163  66.370186  72.100558  62.278186   \n",
-       "median          108.0       67.0       65.0       66.0       71.0       62.0   \n",
-       "mode                1       62.0       63.0       65.0       60.0       56.7   \n",
-       "Q1:25th          54.5       60.6       60.9       61.0       60.0     57.945   \n",
-       "Q2:50th         108.0       67.0       65.0       66.0       71.0       62.0   \n",
-       "Q3:75th         161.5       75.7       73.0       72.0       83.5     66.255   \n",
-       "99th           212.86       87.0      91.86      83.86       97.0    76.1142   \n",
-       "Q4:100th        215.0       89.4       97.7       91.0       98.0      77.89   \n",
-       "IQR             107.0       15.1       12.1       11.0       23.5       8.31   \n",
-       "min               1.0      40.89       37.0       50.0       50.0      51.21   \n",
-       "max             215.0       89.4       97.7       91.0       98.0      77.89   \n",
-       "lower whister  -106.0      37.95      42.75       44.5      24.75      45.48   \n",
-       "upper whister   322.0      98.35      91.15       88.5     118.75      78.72   \n",
-       "skewness          0.0  -0.132649   0.163639   0.244917   0.282308   0.313576   \n",
-       "kurtosis         -1.2   -0.60751   0.450765   0.052143   -1.08858  -0.470723   \n",
+       "                   sl_no       ssc_p       hsc_p   degree_p     etest_p  \\\n",
+       "mean               108.0   67.303395   66.333163  66.370186   72.100558   \n",
+       "median             108.0        67.0        65.0       66.0        71.0   \n",
+       "mode                   1        62.0        63.0       65.0        60.0   \n",
+       "Q1:25th             54.5        60.6        60.9       61.0        60.0   \n",
+       "Q2:50th            108.0        67.0        65.0       66.0        71.0   \n",
+       "Q3:75th            161.5        75.7        73.0       72.0        83.5   \n",
+       "99th              212.86        87.0       91.86      83.86        97.0   \n",
+       "Q4:100th           215.0        89.4        97.7       91.0        98.0   \n",
+       "IQR                107.0        15.1        12.1       11.0        23.5   \n",
+       "min                  1.0       40.89        37.0       50.0        50.0   \n",
+       "max                215.0        89.4        97.7       91.0        98.0   \n",
+       "lower whister     -106.0       37.95       42.75       44.5       24.75   \n",
+       "upper whister      322.0       98.35       91.15       88.5      118.75   \n",
+       "skewness             0.0   -0.132649    0.163639   0.244917    0.282308   \n",
+       "kurtosis            -1.2    -0.60751    0.450765   0.052143    -1.08858   \n",
+       "var               3870.0  117.228377  118.755706  54.151103  176.251018   \n",
+       "std            62.209324   10.827205   10.897509   7.358743   13.275956   \n",
        "\n",
-       "                      salary  \n",
-       "mean           288655.405405  \n",
-       "median              265000.0  \n",
-       "mode                300000.0  \n",
-       "Q1:25th             240000.0  \n",
-       "Q2:50th             265000.0  \n",
-       "Q3:75th             300000.0  \n",
-       "99th                     NaN  \n",
-       "Q4:100th            940000.0  \n",
-       "IQR                  60000.0  \n",
-       "min                 200000.0  \n",
-       "max                 940000.0  \n",
-       "lower whister       150000.0  \n",
-       "upper whister       390000.0  \n",
-       "skewness            3.569747  \n",
-       "kurtosis           18.544273  "
+       "                   mba_p             salary  \n",
+       "mean           62.278186      288655.405405  \n",
+       "median              62.0           265000.0  \n",
+       "mode                56.7           300000.0  \n",
+       "Q1:25th           57.945           240000.0  \n",
+       "Q2:50th             62.0           265000.0  \n",
+       "Q3:75th           66.255           300000.0  \n",
+       "99th             76.1142                NaN  \n",
+       "Q4:100th           77.89           940000.0  \n",
+       "IQR                 8.31            60000.0  \n",
+       "min                51.21           200000.0  \n",
+       "max                77.89           940000.0  \n",
+       "lower whister      45.48           150000.0  \n",
+       "upper whister      78.72           390000.0  \n",
+       "skewness        0.313576           3.569747  \n",
+       "kurtosis       -0.470723          18.544273  \n",
+       "var            34.028376  8734295412.759695  \n",
+       "std             5.833385        93457.45242  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
