--- a/Faircopy.ipynb
+++ b/Faircopy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "d9b625b4",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "13da6644",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "522f31ff",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "2950e08a",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,7 @@
        "[215 rows x 15 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "a16321f3",
    "metadata": {},
    "outputs": [],
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "cfd2de0f",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
        " 'status']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "69016e7a",
    "metadata": {},
    "outputs": [
@@ -367,7 +367,7 @@
        "['sl_no', 'ssc_p', 'hsc_p', 'degree_p', 'etest_p', 'mba_p', 'salary']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,8 +378,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "21aa831f",
+   "execution_count": 20,
+   "id": "b91f49b9",
    "metadata": {},
    "outputs": [
     {
@@ -389,8 +389,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_8656\\324521342.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdescriptive\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mUnivariate\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mUnivariate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mquan\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mD:\\AI course\\data science\\Univariate.py\u001b[0m in \u001b[0;36mUnivariate\u001b[1;34m(dataset, quan)\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mUnivariate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mquan\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m         descriptive=pd.DataFrame(index=[\"mean\",\"median\",\"mode\",\"Q1:25th\",\"Q2:50th\",\n\u001b[0m\u001b[0;32m     17\u001b[0m                                     \u001b[1;34m\"Q3:75th\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"99th\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"Q4:100th\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"IQR\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"min\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"max\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m                                     \"lower whister\",\"upper whister\",\"skewness\",\"kurtosis\"],columns=quan)\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_7740\\324521342.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdescriptive\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mUnivariate\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mUnivariate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mquan\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mD:\\AI course\\data science\\Univariate.py\u001b[0m in \u001b[0;36mUnivariate\u001b[1;34m(dataset, quan)\u001b[0m\n\u001b[0;32m     15\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mqual\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mquan\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mUnivariate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mquan\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
      ]
     }
@@ -402,7 +402,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b91f49b9",
+   "id": "d9e81dc1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10b4bf11",
    "metadata": {},
    "outputs": [],
    "source": []
